--- a/css/fireball_screen.css
+++ b/css/fireball_screen.css
@@ -21,7 +21,7 @@ blockquote {
 	margin: 2em 2em 2em 1em;
 	padding: 0 .75em 0 1.25em;
 	border-left: 1px solid #777;
-	border-right: 0px solid #777;
+	border-right: 0 solid #777;
 	outline: 0;
 	vertical-align: baseline;
 	background: transparent;
@@ -44,7 +44,6 @@ body {
 	line-height: 1.8em;
 	color: #fff;
 	text-align: left;
-	min-width: 760px;
 	background-color: #4a525a; /* dark blue slate thing */
 }
 
@@ -58,7 +57,7 @@ a:link {
 	border-color: #888;
 	border-width: 0 0 1px 0;
 	border-style: none none solid none;
-	padding: 3px 0px 2px 0px;
+	padding: 3px 0 2px 0;
 	background-color: inherit;
 }
 
@@ -67,7 +66,7 @@ a:visited {
 	border-color: #999;
 	border-width: 0 0 1px 0;
 	border-style: none none dotted none;
-	padding: 3px 0px 2px 0px;
+	padding: 3px 0 2px 0;
 	background-color: inherit;
 }
 
@@ -82,9 +81,8 @@ a em {
 	padding-bottom: 2px; /* Hack for WebKit; otherwise the underscore padding is 0 */
 }
 
-
 sup {
-	line-height: 0px;
+	line-height: 0;
 }
 sup a:link {
 	padding: 3px;
@@ -92,7 +90,6 @@ sup a:link {
 sup a:visited {
 	padding: 3px;
 }
-
 
 p {
 	margin: 0 0 1.6em 0;
@@ -105,7 +102,7 @@ h1 {
 	line-height: 1.5em;
 	text-align: left;
 	font-weight: normal;
-	margin: 0em 0px 1.25em 0px;
+	margin: 0em 0 1.25em 0;
 }
 
 h2 {
@@ -138,7 +135,6 @@ h3 {
 	text-transform: uppercase;
 }
 
-
 p + h3 {
 	margin-top: 4em;
 }
@@ -149,7 +145,6 @@ pre + h3 {
 h6 + h2 {
 	margin-top: 2em;
 }
-
 
 h4, h5, h6 {
 	font-family: Verdana, "Bitstream Vera Sans", sans-serif;
@@ -185,17 +180,14 @@ img {
 	max-width: 100%;
 }
 
-
 thead {
 	font-weight: bold;
 }
 
-
 ul, ol {
-	padding-left: 1.25em;
-	margin: 0 0 2em 1em;
+	margin: 0 0 2em;
+	padding: 0;
 }
-
 
 pre {
 	font-family: Menlo, Monaco, monospace;
@@ -213,7 +205,6 @@ code {
 	font-family: Menlo, Monaco, monospace;
 	font-size: 1em; /* 1.09em for Courier */
 }
-
 
 ul {
 	list-style-type: square;
@@ -323,32 +314,28 @@ and (max-device-width : 568px) {
 	}
 }
 
-
 /**** IDs *************************************************************/
 
 #Box {
+	margin: 0 auto;
+	padding: 0 10px;
 	border: 0;
-	width: 720px;
 	height: auto;
-	margin: 0 auto 0 auto;
-	padding: 0;
 	text-align: left;
+	max-width: 760px;
 }
 
-
 #Banner {
-	width: 300px;
-	height: auto;
-	border: 0px dotted #606870;
-	padding: 0;
-	margin: 59px 12px 69px 41px;
-	text-align: left;
+	margin: 0 auto;
+	padding-top: 40px;
+	text-align: center;
 	background-color: transparent;
-	line-height: 0px;
+	line-height: 0;
+	border: 0;
 }
 
 #Banner img {
-	border-width: 0px;
+	border-width: 0;
 }
 
 #Banner img:hover {
@@ -358,7 +345,7 @@ and (max-device-width : 568px) {
 }
 
 #Banner a {
-	border-width: 0px;
+	border-width: 0;
 }
 
 #Banner a:hover {
@@ -373,7 +360,7 @@ and (max-device-width : 568px) {
 }
 
 #BannerYogi img {
-	border-width: 0px;
+	border-width: 0;
 }
 
 #BannerYogi img:hover {
@@ -382,7 +369,7 @@ and (max-device-width : 568px) {
 }
 
 #BannerYogi a {
-	border-width: 0px;
+	border-width: 0;
 }
 
 #BannerYogi a:hover {
@@ -397,7 +384,7 @@ and (max-device-width : 568px) {
 	/*	margin: 0 -150px 0 0;		/* New margins for Amazon OS X upgrade promos */
 	margin: -35px -20px 0 0;	/* Regular promos */
 	text-align: right;
-	border: 0px;
+	border: 0;
 	width: 450px;
 
 	font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
@@ -407,9 +394,9 @@ and (max-device-width : 568px) {
 }
 #BannerPromo img {
 	border-color: #727272;
-	border-width: 0px;  /* was: 1px;   */
+	border-width: 0;  /* was: 1px;   */
 	border-style: solid;
-	margin-left: 0px;
+	margin-left: 0;
 }
 #BannerPromo img:hover {
 	background-color: #555e66;
@@ -418,8 +405,8 @@ and (max-device-width : 568px) {
 {
 	color: transparent;
 	border-color: transparent;
-	padding-bottom: 0px;
-	border-width: 0px;
+	padding-bottom: 0;
+	border-width: 0;
 }
 /* Doesn't seem to do anything, use class="no_underlines" instead...
 #BannerPromo a:hover {
@@ -436,73 +423,60 @@ and (max-device-width : 568px) {
 
 
 #Main {
-	padding: 0px;
-	border: 0px dotted gray;
+	padding: 0;
+	border: 0;
 	position: relative; /* Makes text selection hug text column. */
-	margin-left: 222px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-top: 0px;
-	width: 425px;
 }
 
 #MainFullWidth {
 	/*
 		Like #Main, but used on pages without #Sidebar; e.g. the Referrers stats page
 	*/
-	padding: 0px;
+	padding: 0;
 	position: relative;
 	border-color: white;
-	border-width: 0px 0px 0px 0px;
+	border-width: 0;
 	border-style: solid;
 	margin-left: 50px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-top: 0px;
+	margin-right: 0;
+	margin-bottom: 0;
+	margin-top: 0;
 }
 
 
 #Sidebar {
-	position: absolute;
-	top: 191px;
-	margin: 0 0 0 -222px; /* IE/Win 6 Workaround Hack */
-	/*
-		-- Used this instead of the above for Sidebar positioning from Oct 2003 - Feb 2006
-		-- but abandoned it because of the way IE/Win deals with wider-than-425px elements
-		-- with floating:
-		float: left;
-	*/
-	width: 160px;
-	height: auto;
-	border: 0px dotted gray;
-	padding: 5px 0 0 0;
+	border: 0;
+	padding: 5px 0 0;
 	background-color: transparent;
 	color: #eee;
-	text-align: right;
-	/*
-		font-size: .91em;
-	*/
+	text-align: center;
 	line-height: 1em;
 	font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
 }
 
-
 #Sidebar ul {
-	margin: 0 0 5em -4em;
+	margin: 0 0 3em;
 }
 
 #Sidebar li {
 	list-style: none;
 	letter-spacing: 2px;
 	text-transform: uppercase;
-	margin: 0 0 1em 0;
+	margin: 0;
 	padding: 0;
+}
+
+#Sidebar li a {
+	margin: 0 auto;
+	padding: 0.5em 0;
+	display: block;
+	width: 70%
 }
 
 #Sidebar p {
 	padding: 0;
 	letter-spacing: 2px;
-	margin: 0 0 5em -3em;
+	margin: 0 0 3em;
 }
 
 #Sidebar h2 {
@@ -538,7 +512,6 @@ and (max-device-width : 568px) {
 	color: #fff;
 }
 
-
 #Splinks {
 	line-height: 1.9em;
 	color: #ccc;
@@ -573,13 +546,10 @@ and (max-device-width : 568px) {
 	padding: 4px 5px 4px 20px;
 }
 
-
 /* The Deck */
-
 
 #SidebarMartini {
 	border: 0;
-	margin: 10em 0 0 2em;
 	padding: 0;
 	font-family: Verdana, "Bitstream Vera Sans", sans-serif;
 	font-size: 11px;
@@ -590,20 +560,20 @@ and (max-device-width : 568px) {
 }
 
 #SidebarMartini img {
-	border: 0px solid transparent;
+	border: 0;
 }
 
 #SidebarMartini img:hover {
 	outline: 2px solid #626a73;
 }
 
-
 #SidebarMartini p {
-	margin: 8px 0 0 -26px;
+	margin: 8px auto 0;
 	width: 165px;
 	color: #ccc;
 	letter-spacing: normal;
 	line-height: 1.7em;
+	display: block;
 }
 
 #SidebarMartini p a {
@@ -623,18 +593,16 @@ and (max-device-width : 568px) {
 	color: #eee;
 }
 
-
-
 #ViaTheDeck {
 	margin-top: 25px !important;
 }
 #ViaTheDeck a {
 	padding: 5px 0 0 0 !important;
-	border: 0px !important;
+	border: 0 !important;
 }
 #ViaTheDeck a:hover {
 	padding: 0;
-	border: 0px !important;
+	border: 0 !important;
 	background-color: #626a73 !important;
 }
 #ViaTheDeck img:hover {
@@ -642,7 +610,6 @@ and (max-device-width : 568px) {
 }
 
 #ViaTheDeck span { display: none; } /* Hide spans by default on non-retina */
-
 
 /* 2X Retina image replacements */
 @media (-webkit-min-device-pixel-ratio:2) {
@@ -665,10 +632,6 @@ and (max-device-width : 568px) {
 	}
 }
 
-
-
-
-
 #SidebarPromo {
 	border: 0;
 	margin-top: 11em; /* Changed tp 3em from 7em 2005-12-27 in response to Safari dupe display bug */
@@ -679,7 +642,7 @@ and (max-device-width : 568px) {
 #SidebarPromo a {
 	display: block;
 	width: 160px;
-	margin: 5px 0 0 0px;
+	margin: 5px 0 0 0;
 	text-align: right;
 	color: #ccc;
 	border-color: #777;
@@ -715,7 +678,6 @@ and (max-device-width : 568px) {
 	font-size: 1em;
 	letter-spacing: normal;
 	text-transform: none;
-
 	/* Use border-bottom underlining instead: */
 	border-color: #888;
 	border-width: 0 0 1px 0;
@@ -726,7 +688,7 @@ and (max-device-width : 568px) {
 #Footer {
 	margin-top: 14em;
 	padding-bottom: 1em;
-	text-align: left;
+	text-align: center;
 	background-color: transparent;
 }
 
@@ -737,7 +699,7 @@ and (max-device-width : 568px) {
 	padding: 0;
 	margin: 2em 0 1em 0;
 	height: 4em; /* Setting a height makes it act like a block */
-	border: 0px dotted #606870;
+	border: 0;
 }
 
 #ProjectSubmenu li {
@@ -745,7 +707,6 @@ and (max-device-width : 568px) {
 	padding: 0;
 	margin: 0;
 }
-
 
 #ProjectSubmenu li a,
 #ProjectSubmenu li a:link,
@@ -784,7 +745,7 @@ and (max-device-width : 568px) {
 	background-color: transparent;
 	padding: 0;
 	margin: 8em 0 0 0;
-	border: 0px dotted gray;
+	border: 0;
 	color: #aaa;
 }
 #PreviousNext a:link {
@@ -802,7 +763,6 @@ and (max-device-width : 568px) {
 	margin: 0;
 	line-height: 2em;
 }
-
 
 /**** Classes *************************************************************/
 
@@ -826,10 +786,10 @@ and (max-device-width : 568px) {
 	color: #eee;
 }
 .article img {
-	border: 0px solid #ccc; /* 7 Jan 2011 */
+	border: 0; /* 7 Jan 2011 */
 }
 .noborder {
-	border: 0px !important;
+	border: 0 !important;
 }
 
 .bumpleft125 {
@@ -869,7 +829,7 @@ and (max-device-width : 568px) {
 .smallprint {
 	margin-top: 4em;
 	line-height: 1.8em;
-	text-align: left;
+	text-align: center;
 	color: #aaa;
 }
 .smallprint a:link {
@@ -893,7 +853,6 @@ and (max-device-width : 568px) {
 }
 .timestamp a:visited { color: #aaa; }
 .timestamp a:hover { color: #fff; }
-
 
 /* Datelines go under article headers: */
 .dateline {
@@ -919,7 +878,6 @@ dl + h2.dateline {
 	font-size: 0.9em;
 	margin: 8em 0 4em 0;
 }
-
 
 .stats a {
 	text-decoration: none;
@@ -957,7 +915,7 @@ dl + h2.dateline {
 	border: 0 solid #666;
 }
 .article th {
-	border-bottom: 0px solid #666;
+	border-bottom: 0 solid #666;
 	padding: 0 1.5em 0 0;
 	font-weight: normal;
 	font-size: .91em;
@@ -966,7 +924,6 @@ dl + h2.dateline {
 	text-transform: uppercase;
 	font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
 }
-
 
 .extended {
 	font-style: italic;
@@ -1036,11 +993,16 @@ dl + h2.dateline {
 .promo img:hover {
 	border-color: #999;
 }
-.promo a       { border: 0; background: transparent; }
-.promo a:link  { border: 0; }
-.promo a:hover { border: 0; }
-
-
+.promo a {
+	border: 0;
+	background: transparent;
+}
+.promo a:link {
+	border: 0;
+}
+.promo a:hover {
+	border: 0;
+}
 
 .caps {
 	font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
@@ -1090,7 +1052,7 @@ dl + h2.dateline {
 */
 .linkedlist {
 	color: #eee;
-	border-width: 0 0 0px 0;
+	border-width: 0 0 0 0;
 	border-style: solid;
 	border-color: #666;
 	padding-bottom: 0em;
@@ -1106,7 +1068,7 @@ dl + h2.dateline {
 }
 .linkedlist dt a {
 	padding-top: 2px;
-	padding-bottom: 0px;
+	padding-bottom: 0;
 	color: #ccc;
 }
 .linkedlist dt a:link {
@@ -1136,7 +1098,7 @@ dl + h2.dateline {
 	margin: 0 1em 0 0.25em;
 	padding: 0 .75em 0 1em;
 	border-left: 1px solid #777;
-	border-right: 0px solid #777;
+	border-right: 0 solid #777;
 	color: #ddd;
 }
 .linkedlist blockquote a {
@@ -1168,9 +1130,16 @@ dl + h2.dateline {
 	font-family: "Hiragino Kaku Gothic Pro", "Osaka", "Zapf Dingbats";
 }
 
-dt:hover a.permalink { color: #eee; }
-h2:hover a.permalink { color: #eee; padding: 3px; }
-h3:hover a.permalink { color: #eee; }
+dt:hover a.permalink {
+	color: #eee;
+}
+h2:hover a.permalink {
+	color: #eee;
+	padding: 3px;
+}
+h3:hover a.permalink {
+	color: #eee;
+}
 
 .article a.permalink {
 	color: #606870;
@@ -1210,7 +1179,7 @@ a.footnoteBackLink {
 	padding: 3px 4px 2px 4px;
 	vertical-align: -.2em;
 	font-size: 1.2em;
-	line-height: 0px;
+	line-height: 0;
 	color: #bbb;
 }
 a.footnoteBackLink:hover {
@@ -1242,19 +1211,15 @@ a.footnoteBackLink:hover {
 .subtleScroll::-webkit-scrollbar-thumb {
 	background-color: rgba(255,255,255,.4);
 	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0)), to(rgba(0,0,0,.2)));
-	border: 0px solid;
+	border: 0;
 	-webkit-border-radius: 5px;
 }
 .subtleScroll::-webkit-scrollbar-thumb:active {
 	background-color: rgba(255,255,255,.6);
 }
 
-
-
 /* Workaround for ImageZoom white boxes in non-Safari browsers */
-#ShadowBox img, #ZoomBox img { margin-top: 0px; }
-
-
+#ShadowBox img, #ZoomBox img { margin-top: 0; }
 
 /**** Colors ***************************************************
 
